--- a/index.html
+++ b/index.html
@@ -73,34 +73,34 @@
         <!-- section foto -->
         <section>
             <h1>Чем мы занимаемся</h1>
-            <img width="370" src="./image/box-1.jpg" alt="Програмирование" />
-            <img width="370" src="./image/box-2.jpg" alt="Общение с клиентами" />
-            <img width="370" src="./image/box-3.jpg" alt="Дизайн чево-либо" />
+            <img width="370" src="./image0/box-1.jpg" alt="Програмирование" />
+            <img width="370" src="./image0/box-2.jpg" alt="Общение с клиентами" />
+            <img width="370" src="./image0/box-3.jpg" alt="Дизайн чево-либо" />
         </section>
         <!-- section team -->
         <section>
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img width="270" src="./image/img-3.jpg" alt="Игорь Демьяненко" />
+                    <img width="270" src="./image0/img-3.jpg" alt="Игорь Демьяненко" />
                     <h3>Игорь Демьяненко</h3>
                     <p>Product Designer</p>
                 </li>
 
                 <li>
-                    <img width="270" src="./image/img-2.jpg" alt="Ольга Репина" />
+                    <img width="270" src="./image0/img-2.jpg" alt="Ольга Репина" />
                     <h3>Ольга Репина</h3>
                     <p>Frontend Developer</p>
                 </li>
 
                 <li>
-                    <img width="270" src="./image/img-1.jpg" alt="Николай Тарасов" />
+                    <img width="270" src="./image0/img-1.jpg" alt="Николай Тарасов" />
                     <h3>Николай Тарасов</h3>
                     <p>Marketing</p>
                 </li>
 
                 <li>
-                    <img width="270" src="./image/img.jpg" alt="Михаил Ермаков" />
+                    <img width="270" src="./image0/img.jpg" alt="Михаил Ермаков" />
                     <h3>Михаил Ермаков</h3>
                     <p>UI Designer</p>
                 </li>
