--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 <body>
     <!-- main header -->
     <header>
-        <header class="header">
+        <header>
             <nav>
                 <!-- main logo -->
                 <a href="">WebStudio </a>
@@ -100,7 +100,7 @@
         </section>
     </main>
     <!-- footer -->
-    <footer class="footer">
+    <footer>
         <address>
     
             <a href="">WebStudio</a>
