--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфолио</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <!-- main header -->
@@ -25,7 +26,6 @@
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111">+380961111111</a></li>
             </ul>
-        
     </header>
     <!-- main -->
     <main>
