--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Студия</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -16,16 +18,16 @@
             <a href="">WebStudio </a>
             <!-- main list -->
             
-            <ul>
-                <li><a href="./index.html">Студия</a></li>
-                <li><a href="./portfolio.html">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+            <ul class="site-nav list">
+                <li><a class="header-link current" href="./index.html">Студия</a></li>
+                <li><a class="header-link " href="./portfolio.html">Портфолио</a></li>
+                <li><a class="header-link " href="">Контакты</a></li>
             </ul>
         </nav>     
             <!-- main gmail and number -->
                 <ul>
-                    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a href="tel:+380961111111">+380961111111</a></li>
+                    <li><a class="header-number-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li><a class="header-number-link" href="tel:+380961111111">+380961111111</a></li>
                 </ul>
         
     </header>
@@ -35,7 +37,7 @@
             <!-- baner -->
             <section>
                 <h1>Эффективные решения <br> для вашего бизнеса</h1>
-                <button type="button">Заказать услугу</button>
+                <button class="services-button"type="button">Заказать услугу</button>
             </section>
         <!-- section work -->
             <section>
@@ -122,11 +124,11 @@
                 </li>
 
                 <li>
-                    <a href="mailto:info@devstudio.com">info@example.com</a>
+                    <a class="header-number-link" href="mailto:info@devstudio.com">info@example.com</a>
                 </li>
 
                 <li>
-                    <a href="tel:+380961111111">+380991111111</a>
+                    <a class="header-number-link" href="tel:+380961111111">+380991111111</a>
                 </li>
             </ul>
         </address>
