--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <!-- baner -->
             <section>
                 <h1 class="decision">Эффективные решения <br> для вашего бизнеса</h1>
-                <button class="services-button"type="button">Заказать услугу</button>
+                <button class="services-button" type="button">Заказать услугу</button>
             </section>
         <!-- section work -->
             <section>
@@ -79,34 +79,34 @@
         <!-- section foto -->
         <section>
             <h1 class="work">Чем мы занимаемся</h1>
-            <img width="370" src="./image0/box-1.jpg" alt="Програмирование" />
-            <img width="370" src="./image0/box-2.jpg" alt="Общение с клиентами" />
-            <img width="370" src="./image0/box-3.jpg" alt="Дизайн чево-либо" />
+            <img width="370" src="./image/box-1.1.jpg" alt="Програмирование" />
+            <img width="370" src="./image/box-2.1.jpg" alt="Общение с клиентами" />
+            <img width="370" src="./image/box-3.1.jpg" alt="Дизайн чево-либо" />
         </section>
         <!-- section team -->
         <section>
             <h2 class="team">Наша команда</h2>
             <ul>
                 <li>
-                    <img width="270" src="./image0/img-3.jpg" alt="Игорь Демьяненко" />
+                    <img width="270" src="./image/box-4.1.jpg" alt="Игорь Демьяненко" />
                     <h3 class="name-team">Игорь Демьяненко</h3>
                     <p class="position">Product Designer</p>
                 </li>
 
                 <li>
-                    <img width="270" src="./image0/img-2.jpg" alt="Ольга Репина" />
+                    <img width="270" src="./image/box-5.1.jpg" alt="Ольга Репина" />
                     <h3 class="name-team">Ольга Репина</h3>
                     <p class="position">Frontend Developer</p>
                 </li>
 
                 <li>
-                    <img width="270" src="./image0/img-1.jpg" alt="Николай Тарасов" />
+                    <img width="270" src="./image/box-6.1.jpg" alt="Николай Тарасов" />
                     <h3 class="name-team">Николай Тарасов</h3>
                     <p class="position">Marketing</p>
                 </li>
 
                 <li>
-                    <img width="270" src="./image0/img.jpg" alt="Михаил Ермаков" />
+                    <img width="270" src="./image/box-7.1.jpg" alt="Михаил Ермаков" />
                     <h3 class="name-team">Михаил Ермаков</h3>
                     <p class="position">UI Designer</p>
                 </li>
@@ -124,7 +124,7 @@
             <ul>
                 
                 <li>
-                    <a class="maps" href="https://www.google.com.ua/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265841,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858?hl=ru">г. Киев, пр-т Леси Украинки, 26</a>
+                    <a class="maps" href="https://goo.gl/maps/gABfswNxDDoZ95Qf6" target="_blank" rel="nofollow">г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
 
                 <li>
