--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
     <header>
             <nav>
                 <!-- main logo -->
-                <a class="webstudio" href="">WebStudio </a>
+                <a class="studio link" href=""><span class="web link">Web</span>Studio</a>
                 <!-- main list -->
         
                 <ul class="site-nav list">
@@ -29,7 +29,7 @@
                 </ul>
             </nav>
             <!-- main gmail and number -->
-            <ul class="gmail-and-number">
+            <ul class="list">
                 <li><a class="header-number-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a class="header-number-link" href="tel:+380961111111">+380961111111</a></li>
             </ul>
@@ -38,8 +38,9 @@
 <!-- main -->
 <main>
     <section>
+        <h1 class="visually-hidden">portfolio</h1>
         <!-- Buttons -->
-        <ul>
+        <ul class="list">
             <li><button class="button-menu-section">Все</button></li>
             <li><button class="button-menu-section">Веб-сайты</button></li>
             <li><button class="button-menu-section">Приложения</button></li>
@@ -47,59 +48,59 @@
             <li><button class="button-menu-section">Маркетинг</button></li>
         </ul>
         <!-- Job -->
-        <ul>
+        <ul class="list">
 
             <li>
                 <img width="370" src="./image/box-1.jpg" alt="" />
-                <h3 class="job">Технокряк</h3>
+                <h2 class="job">Технокряк</h2>
                 <p class="sites">Веб-сайт</p>
             </li>
 
             <li>
                 <img width="370" src="./image/box-2.jpg" alt="" />
-                <h3 class="job">Постер New Orlean vs Golden Star</h3>
+                <h2 class="job">Постер New Orlean vs Golden Star</h2>
                 <p class="sites">Дизайн</p>
             </li>
 
             <li>
                 <img width="370" src="./image/box-3.jpg" alt="" />
-                <h3 class="job">Ресторан Seafood</h3>
+                <h2 class="job">Ресторан Seafood</h2>
                 <p class="sites">Приложение</p>
             </li>
 
             <li>
                 <img width="370" src="./image/box-4.jpg" alt="" />
-                <h3 class="job">Проект Prime</h3>
+                <h2 class="job">Проект Prime</h2>
                 <p class="sites">Маркетинг</p>
             </li>
 
             <li>
                 <img width="370" src="./image/box-5.jpg" alt="" />
-                <h3 class="job">Проект Boxes</h3>
+                <h2 class="job">Проект Boxes</h2>
                 <p class="sites">Приложения</p>
             </li>
 
             <li>
                 <img width="370" src="./image/box-6.jpg" alt="" />
-                <h3 class="job">Inspiration has no Borders</h3>
+                <h2 class="job">Inspiration has no Borders</h2>
                 <p class="sites">Веб-сайт</p>
             </li>
 
             <li>
                 <img width="370" src="./image/box-7.jpg" alt="" />
-                <h3 class="job">Издание Limited Edition</h3>
+                <h2 class="job">Издание Limited Edition</h2>
                 <p class="sites">Дизайн</p>
             </li>
 
             <li>
                 <img width="370" src="./image/box-8.jpg" alt="" />
-                <h3 class="job">Проект LAB</h3>
+                <h2 class="job">Проект LAB</h2>
                 <p class="sites">Маркетинг</p>
             </li>
 
             <li>
                 <img width="370" src="./image/box-9.jpg" alt="" />
-                <h3 class="job">Growing Business</h3>
+                <h2 class="job">Growing Business</h2>
                 <p class="sites">Приложение</p>
             </li>
         </ul>
@@ -108,11 +109,11 @@
 
 <!-- footer -->
 <footer>
+
+            <a class="studio link" href=""><span class="web link">Web</span>Studio</a>
+
     <address>
-
-        <a class="webstudio" href="">WebStudio</a>
-
-        <ul>
+        <ul class="list">
 
             <li>
                 <a class="maps" href="https://goo.gl/maps/gABfswNxDDoZ95Qf6" target="_blank" rel="nofollow">г. Киев, пр-т Леси Украинки, 26</a>
