--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <title>Портфолио</title>
     <!-- Fonts -->
     <link
-        href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Oleo+Script&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet"
         />
     <!-- CSS -->
@@ -23,15 +23,15 @@
                 <!-- main list -->
         
                 <ul class="site-nav list">
-                    <li><a class="header-link " href="./index.html">Студия</a></li>
-                    <li><a class="header-link current " href="./portfolio.html">Портфолио</a></li>
-                    <li><a class="header-link " href="">Контакты</a></li>
+                    <li><a class="header-link link" href="./index.html">Студия</a></li>
+                    <li><a class="header-link current link" href="./portfolio.html">Портфолио</a></li>
+                    <li><a class="header-link link" href="">Контакты</a></li>
                 </ul>
             </nav>
             <!-- main gmail and number -->
             <ul class="list">
-                <li><a class="header-number-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a class="header-number-link" href="tel:+380961111111">+380961111111</a></li>
+                <li><a class="header-number-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="header-number-link link" href="tel:+380961111111">+380961111111</a></li>
             </ul>
     </header>
 
@@ -116,15 +116,15 @@
         <ul class="list">
 
             <li>
-                <a class="maps" href="https://goo.gl/maps/gABfswNxDDoZ95Qf6" target="_blank" rel="nofollow">г. Киев, пр-т Леси Украинки, 26</a>
+                <a class="maps link" href="https://goo.gl/maps/gABfswNxDDoZ95Qf6" target="_blank" rel="nofollow">г. Киев, пр-т Леси Украинки, 26</a>
             </li>
 
             <li>
-                <a class="footer-number-link" href="mailto:info@devstudio.com">info@example.com</a>
+                <a class="footer-number-link link" href="mailto:info@devstudio.com">info@example.com</a>
             </li>
 
             <li>
-                <a class="footer-number-link" href="tel:+380961111111">+380991111111</a>
+                <a class="footer-number-link link" href="tel:+380961111111">+380991111111</a>
             </li>
         </ul>
     </address>
