--- a/portfolio.html
+++ b/portfolio.html
@@ -108,9 +108,9 @@
 </main>
 
 <!-- footer -->
-<footer>
+<footer  class="footer">
 
-            <a class="studio link" href=""><span class="web link">Web</span>Studio</a>
+            <a class="studio-footer link" href=""><span class="web link">Web</span>Studio</a>
 
     <address>
         <ul class="list">
