--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body>
+<body class="container">
 
     <!-- main header -->
     <header>
