--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="container">
    
 <!-- main header -->
-<header>
+<header class="section">
     <nav>
         <!-- main logo -->
         <a  class="studio link" href=""><span class="web link">Web</span>Studio</a>
