--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <button class="services-button" type="button">Заказать услугу</button>
         </section>
     <!-- section work -->
-        <section>
+        <section class="menu">
             <h2 class="visually-hidden">Наши приемущества</h2>
             <ul class="list">
                 <li>
